# gpas-testing

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  requirements.txt  sandbox-1.ipynb  sandbox-2.ipynb  setup.cfg  setup.py  tb-0.txt
.github/workflows/: tests.yaml
gpas_covid_perfect_reads/: __init__.py  variant_definitions.py
gpas_covid_synreads/: common.py  pango_definitions.py  variant_definitions.py
gpas_covid_synreads/data/ampliseq/: SARS-CoV-2.dna_manifest.20200408.bed
gpas_covid_synthetic_reads/: __init__.py  common.py  pango_definitions.py  variant_definitions.py
gpas_covid_synthetic_reads/data/: convert-primer-tsv.py  cov-lineages.csv  covid-artic-v3.amplicons.csv  covid-artic-v3.primers.csv  covid-artic-v4.amplicons.csv  covid-artic-v4.primers.csv  covid-midnight-1200.amplicons.csv  covid-midnight-1200.primers.csv  midnight-1200.qcovid.tsv  tags.txt
gpas_covid_synthetic_reads/data/ampliseq/: SARS-CoV-2.dna_manifest.20200408.probes.txt  (+3 more)
gpas_testing/: common.py  pango_definitions.py
gpas_testing/data/: NC_000962.3_WHO-UCN-GTB-PCI-2021.7_v1.0_GARC1_RUS_SNPs.tsv  convert-primer-tsv.py  cov-lineages.csv  covid-ampliseq-v1.amplicons.csv  covid-artic-v4.amplicons.csv  tags.txt
tests/: create-synthetic-samples.ipynb  tb-resistant-0.txt  tb-resistant-1.txt  tb-test-lineage2-vanilla.txt  tb-test-lineage3-vanilla.txt  tb-test-lineage4-MDR-rpoB@S450L-katG@S315T.txt  tb-test-lineage4-XDR-rpoB@S450L-gyrA@A90V-gyrA@S95T-rplC@C154R.txt  tb-test-lineage4-preXDR-rpoB@S450L-gyrA@A90V-gyrA@S95T.txt
tests/unit/: test_cases.py  test_functions.py
