[metadata]
name = gpas_covid_synthetic_reads
version = file: VERSION
author = Philip W Fowler
author_email = philip.fowler@ndm.ox.ac.uk
description = Predicting the effect of an antibiotic from gene mutations
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/GlobalPathogenAnalysisService/gpas-covid-synthetic-reads
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
package_dir =
packages = find:
python_requires = >=3.6
install_requires = 
    pyfastaq >= 3.17.0
    pyyaml
    numpy
    tqdm
    pandas
    gumpy >= 1.0.2
    requests
    pytest
    pytest-cov
zip_safe = False
include_package_data = True
scripts =
    bin/gpas-covid-synreads-create.py
    bin/gpas-build-uploadcsv.py
    bin/gpas-covid-synreads-analyse.py
    bin/gpas-tb-synreads-create.py
    bin/gpas-test-fn4.py

[options.package_data]
gpas_covid_synthetic_reads = data/*, data/ampliseq/*